2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug
	which doesn't check the ACL properly for incident detail
	information.
	
2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_incidents.php,
	include/functions_db.php,
	operation/incidents/incident_tracking.php,
	operation/incidents/incident_files.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_workunits.php,
	operation/incidents/incident_report.php: Fixed a bug that 
	disable the incident view for incident creator.

2012-03-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed a problem
	which hide field creator from create incident form for users
	with IM flag.

2012-03-07  Sancho Lerena <slerena@artica.es>

	* godmode/setup/setup_mail.php: Added help link.

	* include/help/en/help_mailsetup.php
	include/help/es/help_mailsetup.php: New help files for mail setup.

2012-03-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/setup/setup_mail.php: Added support to configure
	POP port in mail setup form.

2012-03-07 Dario Rodriguez <dario.rodriguez@artica.es>

	*include/functions_incidents.php,
	include/functions_db.php: Fixed search statistics report that
	works wrong and added a better visual style.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/incidents_simple/incidents.php,
	operation/side_menu.php: Fixed an error in ACL disallowing users to
	create incidents when they have flag IW.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug related to
	ACL that disabled the incident edition for incident owners.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident.php: Fixed an error that tried to
	send an email using incident data after the incident was deleted.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>
