@@ -1,5 +1,11 @@
 2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* general/home.php,
+	include/functions_db.php: Fixed a problem showing active
+	incidents in home view.
+
+2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* operation/incidents/incident_detail.php: Fixed a bug
 	which doesn't check the ACL properly for incident detail
 	information.
